<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".BindActivity" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cardpwd" />

    <EditText
        android:id="@+id/cardpwd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView1"
        android:layout_below="@+id/textView1"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:maxLength="10" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/backinfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/cardpwd"
        android:layout_below="@+id/bind_btnqueding"
        android:layout_marginTop="17dp"
        android:text="" />

    <Button
        android:id="@+id/bind_btnqueding"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/serialno"
        android:layout_marginLeft="60dp"
        android:layout_marginTop="22dp"
        
        android:text="@string/bind_queidng" />

    <EditText
        android:id="@+id/serialno"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/cardpwd"
        android:layout_below="@+id/cardpwd"
        android:layout_marginTop="46dp"
        android:ems="6" />

    <TextView
        android:id="@+id/text_serialno"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/serialno"
        android:layout_below="@+id/cardpwd"
        android:layout_marginTop="15dp"
        android:text="@string/cardpwd_serialno" />

</RelativeLayout>